can start server and deploy app with hello world main page now